# 2026-QuEra-Technical

./: pyproject.toml  something.ipynb  temp_qec_please.ipynb
team_solutions/QuantumETS/: .gitignore  README.md  pyproject.toml  requirements.txt  software-guidelines.md  team_solution.md
team_solutions/QuantumETS/2026-QuEra-Technical-main/: README.md  challenge.md  pyproject.toml
team_solutions/QuantumETS/2026-QuEra-Technical-main/assets/: cheatsheet.ipynb
team_solutions/QuantumETS/src/: circuit_diagram_generator.py  kernel_builder.py  main.py  syndrome_evals.py
team_solutions/furious_five/: README.md  furious_five.py
team_solutions/pauley_x/: Animations.ipynb  MSD_circ.ipynb  MSD_test.ipynb  PAULEY_X_README.md  circuits_with_bloqade_test.py  david.ipynb  debugging_pl.ipynb  main.py  manual_noise_injection.py  notes_luna.py  pranav.ipynb  syndrome_extraction.ipynb  syndrome_extraction_correction_basic_7color.ipynb  yvana.ipynb
team_solutions/pauley_x/automated_noise_analysis/: analysis_all.py  analysis_demo.py
team_solutions/pauley_x/bloch_outputs/: logical_bloch_equator_theta1.5708_shots2000_frames72.npz
team_solutions/pauley_x/noise_analysis/: analysis_all.py  analysis_demo.py  noise_injection.py
