[project]
name = "2026-QuEra-Technical"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "beartype==0.22.9",
    "kirin-toolchain==0.22.6",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "Pygments==2.19.2",
    "rich==14.3.1",
    "numpy",
    "typing_extensions==4.15.0",
    "bloqade-circuit[cirq,stim,tsim]>=0.11.0",
    "bloqade",
    "ipykernel>=7.1.0",
    "stimcirq>=1.15.0",
]
